# rankcal

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml
docs/: guide.md  index.md
docs/api/: calibrators.md  decision.md  metrics.md  utils.md
docs/examples/: tutorial.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: choosing-calibrator.md  decisions.md  evaluation.md  hyperparameters.md
examples/: basic_calibration.py  decision_curves.py  topk_reliability.py  tutorial.ipynb
src/rankcal/: __init__.py
src/rankcal/calibrators/: __init__.py  base.py  isotonic.py  monotonic_nn.py  spline.py  temperature.py
src/rankcal/decision/: __init__.py  curves.py  optimize.py
src/rankcal/metrics/: __init__.py  ece.py  ranking.py  reliability.py
src/rankcal/utils/: __init__.py  data.py
tests/: __init__.py  conftest.py  test_calibrators.py  test_decision.py  test_edge_cases.py  test_gpu.py  test_metrics.py
