[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rankcal"
version = "0.1.0"
description = "Calibration and uncertainty quantification for ranking systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "John Hodge"}
]
keywords = [
    "machine-learning",
    "calibration",
    "ranking",
    "uncertainty-quantification",
    "pytorch",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/johnhodge/rankcal"
Repository = "https://github.com/johnhodge/rankcal"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",   # Line too long
    "UP006",  # Use `tuple` instead of `Tuple` - need Tuple for Python 3.9 compat
    "UP035",  # typing.Tuple is deprecated - need for Python 3.9 compat
    "UP037",  # Remove quotes from type annotation - need for forward refs
    "UP045",  # Use X | None - need Optional for Python 3.9 compat
    "N812",   # Lowercase `functional` imported as non-lowercase `F` - PyTorch convention
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
